--- a/home.html
+++ b/home.html
@@ -278,34 +278,15 @@
     </main>
   
 
-    <style>
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-   
-  }
+  <style>
 
-  main {
-    flex: 1 0 auto;
-  } 
-
-  @media(min-width:375px) and (max-width:458px) {
-   #footer {
-      padding-top: 100%;
+    @media(min-width:400px) and (max-width:915px) {
+     #footer {
+      width: 100%;
+      height: 50vh;
    }
 }
-
-@media(min-width:320px) and (max-width:459px) {
-   #footer {
-      padding-bottom: 60%;
-   }
-}
-
-
-
-    </style>
-
+  </style>
 
 
 
