--- a/home.html
+++ b/home.html
@@ -254,8 +254,8 @@
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              <h5 class="white-text">Conteúdo do rodapé</h5>
+              <p class="grey-text text-lighten-4">Você pode usar linhas e colunas aqui para organizar o conteúdo do rodapé.</p>
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Contatos</h5>
@@ -270,8 +270,8 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2023 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          © Texto de direitos autorais de 2023
+          <a class="grey-text text-lighten-4 right" href="#!">Mais links</a>
           </div>
         </div>
       </footer>
