Create: Criação da navbar

--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -66,7 +66,7 @@
 				<a href="imagens/banner.jpg" class="navbar-brand">Adega Brasil Conveniência</a>
 			</div>
 			<!-- Start Navigation -->
-			<nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
+			<!-- <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
 				<ul class="nav navbar-nav">
 					<li>
 						<a href="#hero">Home</a>
@@ -77,7 +77,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right header-button">
 				</ul>
-			</nav>
+			</nav> -->
 		</div>
 	</header>
 	<!-- ==================================================
