--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 	<!-- Meta, title, CSS, favicons, etc. -->
@@ -23,33 +23,11 @@
 
 	<!-- Rocket extras -->
 	<link href="assets/css/animate.css" rel="stylesheet">
-	<link href="assets/css/prettyPhoto.css" rel="stylesheet">
+	<!-- <link href="assets/css/prettyPhoto.css" rel="stylesheet"> -->
 	<link href="assets/css/style.css" rel="stylesheet">
-	<!--[if lt IE 9]><script src="assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-		<![endif]-->
-
-	<!-- Favicons -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144"
-		href="../docs-assets/ico/apple-touch-icon-144-precomposed.png">
-	<link rel="shortcut icon" href="../docs-assets/ico/favicon.png">
 </head>
 
 <body>
-
-	<!-- Start Rocket -->
-	<!-- ********************* -->
-
-	<!-- Parallax Background
-	================================================== -->
-	<!-- image is set in the CSS as a background image -->
-	<!-- <div id="parallax"></div> -->
-	<!-- End Parallax Background
-	================================================== -->
 
 	<!-- Start Header
 	================================================== -->
@@ -90,11 +68,11 @@
 			<!-- <h2>Carousel Example</h2>   -->
 			<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			  <!-- Indicators -->
-			  <!-- <ol class="carousel-indicators">
+			  <ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#myCarousel" data-slide-to="1"></li>
 				<li data-target="#myCarousel" data-slide-to="2"></li>
-			  </ol> -->
+			  </ol>
 		  
 			  <!-- Wrapper for slides -->
 			  <div class="carousel-inner">
@@ -142,7 +120,7 @@
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="service-block animate" data-animate="fadeInRight">
-						<span class="glyphicon glyphicon-tree-conifer"></span>
+						<span class="glyphicon glyphicon glyphicon-flash"></span>
 						<h3>entrega rápida</h3>
 						<p>Na Adega Brasil, você encontra a cerveja perfeita para cada ocasião com entrega rápida -
 							gelada, variada e sempre do jeito que o povo gosta!.</p>
@@ -151,7 +129,7 @@
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="service-block animate" data-animate="flipInY">
-						<span class="glyphicon glyphicon-stats"></span>
+						<span class="glyphicon glyphicon glyphicon glyphicon-user"></span>
 						<h3>Atendimento de Qualidade</h3>
 						<p>Nosso atendimento de qualidade é pensado para você! Estamos prontos para ajudar a encontrar a
 							cerveja ideal e oferecer um serviço personalizado e eficiente.</p>
@@ -160,7 +138,7 @@
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="service-block animate" data-animate="fadeInLeft">
-						<span class="glyphicon glyphicon-tree-deciduous"></span>
+						<span class="glyphicon glyphicon glyphicon-glass"></span>
 						<h3>Variedade Incrível</h3>
 						<p>Na Adega Brasil, você encontra uma seleção vasta de cervejas artesanais, importadas e
 							nacionais, atendendo a todos os gostos e ocasiões.</p>
@@ -169,7 +147,7 @@
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="service-block animate" data-animate="flipInX">
-						<span class="glyphicon glyphicon-heart"></span>
+						<span class="glyphicon glyphicon glyphicon-usd"></span>
 						<h3>Preços Acessíveis</h3>
 						<p>Aproveite nossas ofertas e preços acessíveis, permitindo que você desfrute das melhores
 							cervejas sem pesar no bolso.</p>
