--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -43,19 +43,6 @@
 				<!-- Your Logo -->
 				<a href="imagens/banner.jpg" class="navbar-brand">Adega Brasil Conveniência</a>
 			</div>
-			<!-- Start Navigation -->
-			<!-- <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
-				<ul class="nav navbar-nav">
-					<li>
-						<a href="#hero">Home</a>
-					</li>
-					<li>
-						<a href="#gallery">Produtos</a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right header-button">
-				</ul>
-			</nav> -->
 		</div>
 	</header>
 	<!-- ==================================================
@@ -88,16 +75,6 @@
 						<img src="imagens/banner.jpg" alt="New york" style="width:100%;">
 					</div>
 				</div>
-
-				<!-- Left and right controls -->
-				<!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-				<span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right"></span>
-				<span class="sr-only">Next</span>
-			  </a> -->
 			</div>
 		</div>
 
@@ -121,7 +98,7 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="service-block animate" data-animate="fadeInRight">
 						<span class="glyphicon glyphicon glyphicon-flash"></span>
-						<h3>entrega rápida</h3>
+						<h3>Entrega rápida</h3>
 						<p>Na Adega Brasil, você encontra a cerveja perfeita para cada ocasião com entrega rápida -
 							gelada, variada e sempre do jeito que o povo gosta!.</p>
 						<!-- <button type="button" class="btn btn-primary btn-md btn-rocket btn-rocket-default">Learn More</button> -->
@@ -261,21 +238,7 @@
 								<div class="carousel-caption">
 								</div>
 							</div>
-
 						</div>
-
-						<!-- Previous/Next controls -->
-						<!-- <a class="left carousel-control" href="#my-pics" role="button" data-slide="prev">
-	<span class="icon-prev" aria-hidden="true"></span>
-	<span class="sr-only">Previous</span>
-	</a>
-	<a class="right carousel-control" href="#my-pics" role="button" data-slide="next">
-	<span class="icon-next" aria-hidden="true"></span>
-	<span class="sr-only">Next</span>
-	</a>
-	
-	</div>
-		</div> -->
 	</section>
 
 	<!-- ==================================================
