Alteração: alteração na guia de perguntas

--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -253,7 +253,7 @@
 					<div class="overview animate" data-animate="flipInY">
 						<h1>Grande variedade de cervejas retornáveis</h1>
 						<p class="lead">
-							A Adegra Brasil orgulha-se em oferecer uma grande variedade de cervejas retornáveis. Com um
+							A Adega Brasil orgulha-se em oferecer uma grande variedade de cervejas retornáveis. Com um
 							compromisso com a sustentabilidade e a qualidade, disponibilizamos diversas opções para
 							atender todos os gostos e preferências.
 							Venha conhecer nosso catálogo e desfrutar das melhores cervejas enquanto contribui para um
@@ -271,17 +271,14 @@
 								<div class="panel-heading">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-											Anim pariatur cliche reprehenderit, enim eiusmod ?
+											Como funcionam as garrafas retornáveis?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseOne" class="panel-collapse collapse in">
 									<div class="panel-body">
-										Food truck quinoa nesciunt laborum eiusmod. 3 wolf moon officia aute, non
-										cupidatat skateboard dolor brunch. Anim pariatur cliche reprehenderit, enim
-										eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
-										non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-										eiusmod.
+										Após consumir a cerveja, basta devolver a garrafa vazia na próxima compra.
+										Assim, ajudamos a reduzir o desperdício e promover a sustentabilidade.
 									</div>
 								</div>
 							</div>
@@ -289,17 +286,14 @@
 								<div class="panel-heading">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-											Food truck quinoa nesciunt laborum eiusmod ?
+											Qual é o diferencial das cervejas retornáveis?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseTwo" class="panel-collapse collapse">
 									<div class="panel-body">
-										Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-										richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-										brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
-										sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-										shoreditch et.
+										As cervejas retornáveis são uma escolha sustentável, reduzindo o impacto
+										ambiental e promovendo a reutilização de embalagens de alta qualidade.
 									</div>
 								</div>
 							</div>
@@ -307,15 +301,14 @@
 								<div class="panel-heading">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-											Widtholf moon officia aute?
+											A Adegra Brasil oferece serviço de entrega?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseThree" class="panel-collapse collapse">
 									<div class="panel-body">
-										Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-										richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-										brunch.
+										Sim, oferecemos serviço de entrega para que você possa receber suas cervejas
+										favoritas diretamente em sua casa com toda a comodidade.
 									</div>
 								</div>
 							</div>
@@ -323,15 +316,14 @@
 								<div class="panel-heading">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-											Moon officia aute, non cupidatat skateboard dolor brunch?
+											As cervejas vêm geladas quando entregues?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseFour" class="panel-collapse collapse">
 									<div class="panel-body">
-										Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-										richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-										brunch.
+										Sim, nossas cervejas são entregues geladas para que você possa desfrutar
+										imediatamente após a entrega.
 									</div>
 								</div>
 							</div>
@@ -339,15 +331,15 @@
 								<div class="panel-heading">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
-											Pariatur cliche reprehenderit, enim eiusmod high?
+											Há custo adicional para entrega de cervejas geladas?
 										</a>
 									</h4>
 								</div>
 								<div id="collapseFive" class="panel-collapse collapse">
 									<div class="panel-body">
-										Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-										richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor
-										brunch.
+										Pode haver um pequeno custo adicional para a entrega de cervejas geladas,
+										dependendo da localização e do serviço escolhido. Consulte nossas opções ao
+										finalizar a compra.
 									</div>
 								</div>
 							</div>
@@ -420,8 +412,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="overview animate" data-animate="fadeInDown">
-						<h1><strong>Subscribe Newsletter</strong></h1>
-						<p class="lead">Join thousands of awesome people, there's only one thing to do. Subscribe !</p>
+						<h1><strong>Agradecemos a preferência</strong></h1>
+						<p class="lead">Agradecemos a preferência e a confiança em nossos produtos.</p>
 					</div>
 					<form role="form" class="animate" data-animate="fadeInUp">
 						<div class="input-group">
