--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -364,29 +364,32 @@
 							<li data-target="Carousel" data-slide-to="0" class="active"></li>
 							<li data-target="Carousel" data-slide-to="1"></li>
 							<li data-target="Carousel" data-slide-to="2"></li>
+							<li data-target="Carousel" data-slide-to="3"></li>
 						</ol>
 
 						<div class="carousel-inner">
 							<div class="item active animate" data-animate="flipInY">
 								<blockquote>
-									<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-										posuere erat a ante.</p>
-									<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+									<p class="lead">Oferecemos uma seleção variada de cigarros das melhores marcas.</p>
+									<small>Venda de Cigarros</small>
 								</blockquote>
 							</div>
 							<div class="item animate" data-animate="flipInY">
 								<blockquote>
-									<p class="lead">Bootstrap has a few easy ways to quickly get started, each one
-										appealing to a different skill level and use case. Read through to see what
-										suits your particular needs.</p>
-									<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+									<p class="lead">Disponibilizamos diversas bebidas alcoólicas e não alcoólicas para todos os gostos.</p>
+									<small>Venda de Bebidas</small>
 								</blockquote>
 							</div>
 							<div class="item animate" data-animate="flipInY">
 								<blockquote>
-									<p class="lead">Bring Bootstrap's components to life with over a dozen custom jQuery
-										plugins. Easily include them all, or one by one.</p>
-									<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+									<p class="lead">Explore nossa coleção de destilados premium, incluindo vodkas, whiskies, tequilas e mais.</p>
+									<small>Venda de Destilados</small>
+								</blockquote>
+							</div>
+							<div class="item animate" data-animate="flipInY">
+								<blockquote>
+									<p class="lead">Fornecemos carvão de alta qualidade para churrascos e eventos especiais.</p>
+									<small>Venda de Carvão</small>
 								</blockquote>
 							</div>
 						</div>
