Create: Criação do botão de whatsApp

--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -376,19 +376,22 @@
 							</div>
 							<div class="item animate" data-animate="flipInY">
 								<blockquote>
-									<p class="lead">Disponibilizamos diversas bebidas alcoólicas e não alcoólicas para todos os gostos.</p>
+									<p class="lead">Disponibilizamos diversas bebidas alcoólicas e não alcoólicas para
+										todos os gostos.</p>
 									<small>Venda de Bebidas</small>
 								</blockquote>
 							</div>
 							<div class="item animate" data-animate="flipInY">
 								<blockquote>
-									<p class="lead">Explore nossa coleção de destilados premium, incluindo vodkas, whiskies, tequilas e mais.</p>
+									<p class="lead">Explore nossa coleção de destilados premium, incluindo vodkas,
+										whiskies, tequilas e mais.</p>
 									<small>Venda de Destilados</small>
 								</blockquote>
 							</div>
 							<div class="item animate" data-animate="flipInY">
 								<blockquote>
-									<p class="lead">Fornecemos carvão de alta qualidade para churrascos e eventos especiais.</p>
+									<p class="lead">Fornecemos carvão de alta qualidade para churrascos e eventos
+										especiais.</p>
 									<small>Venda de Carvão</small>
 								</blockquote>
 							</div>
@@ -407,6 +410,15 @@
 	</section>
 	<!-- ==================================================
 	End Slider Blcok -->
+
+
+	<!-- --------------- BOTÂO WHATSAPP--------------- -->
+	<a class="whatsapp-icon pulsate-bck"
+		href="https://api.whatsapp.com/send?phone=5566999157214&amp;text=Olá Adega Brasil Conveniência, gostaria de fazer um pedido."
+		target="_blank" style="position: fixed;bottom: 0;right: 0;margin-right: 6rem;margin-bottom: 1.5rem;">
+		<img src="imagens/whatsapp-logo-png-0.png" style="height:3.5rem;">
+	</a>
+
 
 	<!-- Start Newsletter Block
 	================================================== -->
