Fix: ajustes nas animações

--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -89,14 +89,14 @@
 			<div class="row">
 				<div class="col-md-12">
 					<!-- Title -->
-					<div class="overview animate" data-animate="flipInX">
+					<div class="overview animate" data-animate="fadeInLeft">
 						<h1><strong>Adega Brasil</strong> a melhor conveniência de sinop</h1>
 						<p class="lead">Na Adega Brasil, você encontra a cerveja perfeita para cada ocasião - gelada,
 							variada e sempre do jeito que o povo gosta!</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<div class="service-block animate" data-animate="fadeInRight">
+					<div class="service-block animate" data-animate="fadeInLeft">
 						<span class="glyphicon glyphicon glyphicon-flash"></span>
 						<h3>Entrega rápida</h3>
 						<p>Na Adega Brasil, você encontra a cerveja perfeita para cada ocasião com entrega rápida -
@@ -105,7 +105,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<div class="service-block animate" data-animate="flipInY">
+					<div class="service-block animate" data-animate="fadeInLeft">
 						<span class="glyphicon glyphicon glyphicon glyphicon-user"></span>
 						<h3>Atendimento de Qualidade</h3>
 						<p>Nosso atendimento de qualidade é pensado para você! Estamos prontos para ajudar a encontrar a
@@ -123,7 +123,7 @@
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6">
-					<div class="service-block animate" data-animate="flipInX">
+					<div class="service-block animate" data-animate="fadeInLeft">
 						<span class="glyphicon glyphicon glyphicon-usd"></span>
 						<h3>Preços Acessíveis</h3>
 						<p>Aproveite nossas ofertas e preços acessíveis, permitindo que você desfrute das melhores
@@ -144,7 +144,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 sol-sm-12">
-					<div class="overview animate" data-animate="flipInX">
+					<div class="overview animate" data-animate="fadeInLeft">
 						<h1><strong>Adega Brasil Conveniência</strong></h1>
 						<p class="lead">Na Adega Brasil, você encontra a cerveja perfeita para cada ocasião com entrega
 							rápida. gelada, variada, e sempre do jeito que o povo gosta. Desfrute da nossa variedade
@@ -156,7 +156,7 @@
 						src="assets/images/prettyPhoto/adega/233630550_107125701673596_1025248460780945437_n.jpg"
 						alt="" /></div>
 				<div class="col-md-6 col-sm-12">
-					<div class="content-block animate" data-animate="fadeInRight" style="margin-top: 60px;">
+					<div class="content-block animate" data-animate="fadeInLeft" style="margin-top: 60px;">
 						<h2>Adega Brasil</h2>
 						<p class="lead">Aproveite nossas ofertas</p>
 						<hr />
