--- a/adega brasil/index.html
+++ b/adega brasil/index.html
@@ -191,11 +191,11 @@
 					<div id="my-pics" class="carousel slide" data-ride="carousel" style="width:300px;margin:auto;">
 
 						<!-- Indicators -->
-						<ol class="carousel-indicators">
+						<!-- <ol class="carousel-indicators">
 							<li data-target="#my-pics" data-slide-to="0" class="active"></li>
 							<li data-target="#my-pics" data-slide-to="1"></li>
 							<li data-target="#my-pics" data-slide-to="2"></li>
-						</ol>
+						</ol> -->
 
 						<!-- Content -->
 						<div class="carousel-inner" role="listbox">
