Alterações: Alterações no front

--- a/Profile-Card-rafael/index.html
+++ b/Profile-Card-rafael/index.html
@@ -65,12 +65,16 @@
                                             class="fa fa-linkedin text-primary fa-2x"></i></a></li>
                                 <li><a href="https://github.com/Romariolima99" target="_blank"><i
                                             class="fa fa-github text-primary fa-2x"></i></a></li>
-                                <li><a href="https://portfolio-romario-lima.vercel.app/" target="_blank"
-                                        class="btn btn-primary px-4 fa-2x">Portfolio</a></li>
+                                <!-- <li><a href="https://portfolio-romario-lima.vercel.app/" target="_blank"
+                                        class="btn btn-primary px-4 fa-2x">Portfolio</a></li> -->
                             </ul>
                             <div class="buttons social-list">
                                 <a href="https://portfolio-romario-lima.vercel.app/" target="_blank"
                                     class="btn btn-primary px-4 ms-3 ">Clique nos ícones em flutuação</a>
+                            </div>
+                            <div class="buttons social-list">
+                                <a href="https://portfolio-romario-lima.vercel.app/" target="_blank"
+                                    class="btn btn-primary px-4 ms-3 fa fa-github ">Faça uma doação</a>
                             </div>
 
 
